--- a/pdfmr/static/templates2/index.html
+++ b/pdfmr/static/templates2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja"><head>
+	<meta name="google-site-verification" content="7RsACZpyYjXeBd4lnNW_G9iDdkee7P4Q1toGa3vkOo0" />
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>プロ野球選手応援歌</title>
